--- a/index.html
+++ b/index.html
@@ -137,23 +137,24 @@
   </header>
   <main class="md:container md:mx-auto">
     <!-- featured bike  -->
-    <section class="px-16">
+    <section class="">
       <h3 class=" text-5xl lg:mx-64 mt-20 lg:mt-44 font-semibold text-center">Featured Bikes In This Year</h3>
 
 
-      <div class=" gap-20 grid  lg:grid-cols-3  md:grid-cols-  grid-cols-1">
+      <div class=" gap-20 grid  lg:grid-cols-3  md:grid-cols-2  grid-cols-1">
 
         <!-- first featured -->
+        <div class="w-96">
+          <img class="grayscale" src="images/others/extrabike.png" alt="feature-bike.png">
+        </div>
+        <!-- scend featured -->
         <div class="w-96  ">
           <img src="images/others/extrabike.png" alt="extrabike.png">
         </div>
-        <!-- scend featured -->
-        <div class="w-full">
-          <img src="images/others/feature-bike.png" alt="feature-bike.png">
-        </div>
+        
         <!-- third featured -->
         <div class="w-96">
-          <img src="images/others/extrabike.png" alt="extrabike.png">
+          <img class="grayscale" src="images/others/extrabike.png" alt="extrabike.png">
         </div>
       </div>
     </section>
@@ -292,7 +293,7 @@
     </section>
 
 
-    
+
     <section class="my-16">
       <h3 class="text-4xl lg:text-5xl mb-5 lg:mx-64 mt-4 font-semibold 
         text-center capitalize">Frequently Asked
@@ -301,7 +302,7 @@
 
 
       <div>
-        <div class="hero min-h-screen bg-base-200">
+        <div class="hero bg-base-200">
           <div class="hero-content flex-col lg:flex-row">
             <img src="images/others/faq.png" class="max-w-sm rounded-lg shadow-2xl" />
             <div>
@@ -310,11 +311,14 @@
               <p class="py-6">What are the most important things I should
                 know about riding a bike?</p>
 
-              <p class="py-6 text-[#7E848C]">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+              <p class="py-6 text-[#7E848C]">Safety First! Always obey the rules of the road. Obey all traffic signals,
+                signs, and
                 laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a
                 more focused and legally compliant bike rider. </p>
 
-              <p class="py-6">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+              <p class="py-6">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a
+                more focused and legally compliant bike rider. </p>
 
               <p class="py-6">My bike has been in storage is it safe to ride?</p>
 
@@ -335,11 +339,16 @@
     <div>
       <footer class="footer p-10 bg-neutral justify-around text-neutral-content">
         <aside>
-          <svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" class="fill-current"><path d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"></path></svg>
-          <p>ACME Industries Ltd.<br/>Providing reliable tech since 1992</p>
-        </aside> 
+          <svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
+            clip-rule="evenodd" class="fill-current">
+            <path
+              d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z">
+            </path>
+          </svg>
+          <p>ACME Industries Ltd.<br />Providing reliable tech since 1992</p>
+        </aside>
         <nav>
-          <header class="footer-title">Social</header> 
+          <header class="footer-title">Social</header>
           <div class="grid grid-cols-1 w-1/2 gap-4">
             <a href=""><img src="images/others/android.png" alt=""></a>
             <a href=""><img src="images/others/ios.png" alt=""></a>
