edited html main tag

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
   <meta charset="UTF-8">
@@ -151,7 +151,7 @@
         <div class="w-96  ">
           <img src="images/others/extrabike.png" alt="extrabike.png">
         </div>
-        
+
         <!-- third featured -->
         <div class="w-96">
           <img class="grayscale" src="images/others/extrabike.png" alt="extrabike.png">
