--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <div class="grid gap-20  lg:grid-cols-3  md:grid-cols-2  grid-cols-1">
         <!-- first card  -->
         <div class="card w-96 bg-base-100 shadow-xl">
-          <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+          <figure><img src="./images/others/latest1.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
             <p class="leading-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
@@ -181,7 +181,7 @@
 
         <!--Scend card   -->
         <div class="card w-96 bg-base-100 shadow-xl">
-          <figure><img src="/images/others/latest2.png" alt="Shoes" /></figure>
+          <figure><img src="./images/others/latest2.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title text-3xl">Motorcycles & Scooters</h2>
             <p class="leading-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
@@ -195,7 +195,7 @@
 
         <!--third card   -->
         <div class="card w-96 bg-base-100 shadow-xl">
-          <figure><img src="/images/others/latest3.png" alt="Shoes" /></figure>
+          <figure><img src="./images/others/latest3.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title text-3xl">2021 Honda CBR500R</h2>
             <p class="leading-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
